# vng-api-common

./: .bumpversion.cfg  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  compilemessages.sh  makemessages.sh  notifications-webhook-2.0.yaml  notifications-webhook.yaml  openapi.yaml  package-lock.json  package.json  setup.cfg  swagger2.0.yaml  tox.ini
.github/workflows/: ci.yml  code_quality.yml
docs/: changelog.rst  conf.py  index.rst  notifications.rst  quickstart.rst  setup_config.rst
docs/ref/: client.rst  database.rst  exceptions.rst  fields.rst  filters.rst  geo.rst  http_caching.rst  index.rst  middleware.rst  oas.rst  permissions.rst  polymorphism.rst  serializers.rst  testing.rst  utils.rst  validators.rst  viewset-mixins.rst
notifications_webhook/: __init__.py  settings.py  urls.py  views.py
testapp/: factories.py  models.py  openapi.yaml  schema.py  serializers.py  settings.py  urls.py  utils.py  views.py  viewsets.py
testapp/migrations/: 0001_initial.py  0002_auto_20190620_0849.py  0003_auto_20200416_0423.py  0003_person__etag.py  0004_auto_20190909_0206.py  0005_group_name.py  0006_merge_20200416_0440.py  0007_record.py  0008_poly_alter_record_create_date_fkmodel.py  0009_geometrymodel_mediafilemodel.py  0009_mediafilemodel.py
tests/: __init__.py  conftest.py  test_autorisatie_validation.py  test_cache_headers.py  test_cached_hyperlinkrelatedfields.py  test_check_query_params.py  test_checks.py  test_choices.py  test_config.py  test_configuration_steps.py  test_configuration_steps_applicaties.py  test_content_type_headers.py  test_field_extensions.py  test_filter_extension.py  test_filters.py  test_gegevensgroepen.py  test_get_resource.py  test_jwt_decoding.py  test_jwtsecrets.py  test_migrations.py  test_nested_serializer_validation.py  test_pagination.py  test_permissions.py  test_publish_validators.py  test_register_webhook.py  test_schema.py  test_schema_root_tags.py  test_serializer_extensions.py  test_serializer_fields.py  test_server_errors.py  test_utils.py  test_validators.py  test_views.py  utils.py
tests/files/: setup_config_applicaties.yaml  setup_config_jwtsecrets.yaml
vng_api_common/: __init__.py  admin.py  apps.py  caching.py  checks.py  choices.py  client.py  compat.py  constants.py  decorators.py  descriptors.py  doc.py  exception_handling.py  exceptions.py  fields.py  filters.py  filtersets.py  generators.py  geo.py  middleware.py  mocks.py  models.py  oas.py  pagination.py  permissions.py  polymorphism.py  routers.py  schema.py  scopes.py  search.py  serializers.py  urls.py  utils.py  validators.py  version.py  views.py  viewsets.py
vng_api_common/api/: __init__.py  permissions.py  serializers.py  urls.py  views.py
vng_api_common/audittrails/: __init__.py  admin.py  apps.py  audits.py  constants.py  models.py  utils.py  viewsets.py
vng_api_common/audittrails/api/: scopes.py  serializers.py
vng_api_common/audittrails/migrations/: 0001_initial.py  0002_auto_20190514_0820.py  0002_auto_20190516_0830.py  0003_auto_20190517_0844.py  0004_auto_20190520_0956.py  0004_auto_20190520_1238.py  0004_auto_20190520_1346.py  0005_auto_20190520_1450.py  0006_audittrail_toelichting.py  0007_auto_20190522_0916.py  0008_audittrail_resource_weergave.py  0009_auto_20190712_1643.py  0010_audittrail_request_id.py  0011_auto_20190918_1335.py  0012_auto_20200619_0545.py  0012_remove_audittrail_request_id.py  0013_audittrail_logrecord_id.py  0013_auto_20201207_0846.py  0014_auto_20201221_0905.py  0014_auto_20210323_1654.py  0015_auto_20220111_1523.py  0015_auto_20220318_1608.py  0016_merge_20220607_0517.py  0017_alter_audittrail_bron.py  0018_auto_20220927_1000.py  0018_auto_20221212_0745.py  _operations.py
vng_api_common/authorizations/: admin.py  middleware.py  models.py  serializers.py  utils.py  validators.py
vng_api_common/authorizations/config/: admin.py  models.py
vng_api_common/authorizations/migrations/: 0001_initial.py  0002_authorizationsconfig.py  0002_auto_20190430_1530.py  0003_auto_20190502_0409.py  0004_auto_20190503_0941.py  0005_auto_20190506_0842.py  0006_auto_20190506_0901.py  0007_auto_20190506_1212.py  0008_auto_20190712_1541.py  0009_update_enums.py  0010_auto_20190712_1643.py  0011_auto_20191114_0728.py  0012_auto_20200619_0545.py  0012_auto_20210323_1654.py  0013_auto_20201207_0846.py  0014_auto_20201221_0905.py  (+4 more)
vng_api_common/caching/: __init__.py  decorators.py  etags.py  introspection.py  models.py  registry.py  signals.py
vng_api_common/conf/: api.py
vng_api_common/db/: operations.py
vng_api_common/extensions/: field_extensions.py  file.py  filter_extensions.py  gegevensgroep.py  geojson.py  hyperlink.py  polymorphic.py  serializer_extensions.py  utils.py
vng_api_common/inspectors/: __init__.py  cache.py  fields.py  files.py  geojson.py  polymorphic.py  query.py  utils.py  view.py
vng_api_common/migrations/: 0001_initial.py  0002_apicredential.py  0003_auto_20190417_1145.py  0004_auto_20190517_0903.py  0005_auto_20190614_1346.py  0006_delete_apicredential.py
vng_api_common/notifications/: __init__.py  admin.py  apps.py  constants.py  handlers.py  kanalen.py  models.py  urls.py  utils.py  views.py  viewsets.py
vng_api_common/schemas/: common.yaml
vng_api_common/templatetags/: vng_api_common.py
vng_api_common/tests/: __init__.py  auth.py  caching.py  schema.py  urls.py
zds_schema/: __init__.py  admin.py  apps.py  constants.py  decorators.py  descriptors.py  exception_handling.py  exceptions.py  fields.py  filters.py  filtersets.py  geo.py  geojson.py  middleware.py  mocks.py  models.py  oas.py  permissions.py  routers.py  schema.py  scopes.py  search.py  serializers.py  tests.py  urls.py  utils.py  validators.py  views.py  viewsets.py
zds_schema/api/: serializers.py  urls.py
zds_schema/conf/: api.py
zds_schema/inspectors/: files.py  geojson.py  query.py  view.py
zds_schema/migrations/: 0001_initial.py  0002_apicredential.py
zds_schema/templatetags/: zds_schema.py
zds_schema/tests/: __init__.py  auth.py  urls.py
(+73 files in other folders)
