# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = commonground-api-common
version = 1.9.0
description = Commonground API tooling
long_description = file: README.rst
url = https://github.com/maykinmedia/commonground-api-common
license = EUPL 1.2
author = Maykin Media, VNG-Realisatie
author_email = support@maykinmedia.nl
keywords = openapi, swagger, django
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
  bin/generate_schema
  bin/patch_content_types
  bin/use_external_components
install_requires =
    django>=3.2.0
    django-choices
    django-filter>=2.0
    django-solo
    djangorestframework~=3.12.0
    djangorestframework_camel_case>=1.2.0
    django-rest-framework-condition
    drf-yasg>=1.20.0
    drf-nested-routers>=0.93.3
    gemma-zds-client>=0.14.0
    iso-639
    isodate
    notifications-api-common
    oyaml
    PyJWT>=2.0.0
    pyyaml
    requests
tests_require =
    pytest
    pytest-django
    pytest-factoryboy
    tox
    isort
    black
    requests-mock
    freezegun

[options.packages.find]
include =
    vng_api_common
    vng_api_common.*

[options.extras_require]
markdown_docs =
    django-markup<=1.3
    markdown
tests =
    psycopg2
    pytest
    pytest-django
    pytest-factoryboy
    tox
    isort
    black
    requests-mock
    freezegun
pep8 = flake8
coverage = pytest-cov
docs =
    psycopg2
    sphinx
    sphinx-rtd-theme
release =
    bump2version

# 3rd party configuration

[aliases]
test=pytest

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 88
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
skip = env,.tox,.history,.eggs
known_django=django
known_first_party=vng_api_common
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
testpaths = tests
DJANGO_SETTINGS_MODULE=testapp.settings

[pep8]
max-line-length=88
exclude=env,.tox,doc

[flake8]
max-line-length=88
exclude=env,.tox,doc

[coverage:run]
branch = True
source = vng_api_common

[coverage:report]
omit =
    */tests/*
   */migrations/*
exclude_lines =
    pragma: no cover
