# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = commonground-api-common
version = 2.2.0
description = Commonground API tooling
long_description = file: README.rst
url = https://github.com/maykinmedia/commonground-api-common
license = EUPL 1.2
author = Maykin Media, VNG-Realisatie
author_email = support@maykinmedia.nl
keywords = openapi, swagger, django
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
  bin/generate_schema
install_requires =
    django>=4.2.0
    django-filter>=23.1,<=25.1
    django-solo
    djangorestframework>=3.15.0
    djangorestframework_camel_case>=1.2.0
    django-rest-framework-condition
    drf-yasg>=1.20.0 # TODO: remove usage?
    drf-nested-routers>=0.94.1
    drf-extra-fields>=3.7.0
    drf-spectacular
    iso-639
    isodate
    notifications-api-common>=0.3.1
    zgw-consumers>=0.35.1
    oyaml
    PyJWT>=2.1.1
    requests
    requests-mock
    coreapi
    ape-pie
tests_require =
    pytest
    pytest-django
    pytest-dotenv
    pytest-factoryboy
    tox
    isort
    black
    requests-mock
    freezegun
    zgw-consumers-oas

[options.packages.find]
include =
    vng_api_common*

[options.extras_require]
markdown_docs =
    django-markup<=1.3
    markdown
djangorestframework_gis =
    djangorestframework-gis>=1.0
tests =
    psycopg2
    pytest
    pytest-django
    pytest-dotenv
    pytest-factoryboy
    tox
    isort
    black
    requests-mock
    freezegun
    zgw-consumers-oas
testutils =
    zgw-consumers-oas
setup-configuration =
    django-setup-configuration>=0.4.0
pep8 = flake8
coverage = pytest-cov
docs =
    psycopg2
    sphinx
    sphinx-rtd-theme
release =
    bump2version

# 3rd party configuration

[aliases]
test=pytest

[isort]
profile = black
combine_as_imports = true
skip =
    env
    node_modules
    .tox
skip_glob = **/migrations/**
known_django=django
known_first_party=vng_api_common
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
testpaths = tests
DJANGO_SETTINGS_MODULE=testapp.settings

[pycodestyle]
max-line-length=88
exclude=env,.tox,doc

[flake8]
max-line-length=88
exclude=env,.tox,doc

[coverage:run]
branch = True
source = vng_api_common

[coverage:report]
omit =
    */tests/*
   */migrations/*
exclude_lines =
    pragma: no cover
